--- a/src/sass/month.scss
+++ b/src/sass/month.scss
@@ -7,7 +7,7 @@
 
 .rbc-row-segment {
   padding: 0 1px 1px 1px;
-
+  margin-bottom: 8px;
   .rbc-event-content {
     @extend .rbc-ellipsis;
   }
@@ -51,15 +51,14 @@
 }
 
 .rbc-month-row {
-  display: flex;
+  display: inline-table !important;
+  flex: 0 0 0 !important;
+  padding: 8px 0;
+  min-height: 100px !important;
   position: relative;
-  flex-direction: column;
-  flex: 1 0 0; // postcss will remove the 0px here hence the duplication below
   flex-basis: 0px;
   overflow: hidden;
-
-  height: 100%; // ie-fix
-
+  height: 100%;
   & + & {
     border-top: 1px solid $cell-border;
   }
